--- a/app/less/tabs.less
+++ b/app/less/tabs.less
@@ -4,8 +4,8 @@
   padding-bottom: 148px;
 
   .lmd-block({
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   });
 }
 
@@ -68,7 +68,7 @@
       outline: none;
       transition: background .2s;
       text-transform: uppercase;
-      font-family: 'OS Bold',AdobeInvisFont,MyriadPro-Regular, sans-serif;
+      font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
       font-size: 15px;
       cursor: pointer;
 
@@ -77,6 +77,10 @@
         transition: background .2s;
       }
     }
+
+    .active-tabs-btn {
+      background: @main-color;
+    }
   }
 }
 
@@ -84,7 +88,8 @@
   flex-grow: 1;
 
   .tabs__content-item {
-    display: flex;
+    //display: flex;
+    display: none;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
@@ -92,6 +97,10 @@
     .md-block({
       justify-content: center;
     });
+  }
+
+  .active-tabs-item {
+    display: flex;
   }
 }
 
@@ -106,7 +115,7 @@
   });
 
   .tabs__contentHeader {
-    font-family: 'OS Bold',AdobeInvisFont,MyriadPro-Regular, sans-serif;
+    font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 20px;
     margin-bottom: 52px;
     max-width: 475px;
@@ -128,7 +137,7 @@
 
     .tabs__contentP {
       font-size: 14px;
-      font-family: 'OS Regular',AdobeInvisFont,MyriadPro-Regular, sans-serif;
+      font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
       color: #86878B;
     }
   }
@@ -137,7 +146,7 @@
     border-radius: 3px;
     background: @main-color;
     color: white;
-    font-family: 'OS SemiBold',AdobeInvisFont,MyriadPro-Regular, sans-serif;
+    font-family: 'OS SemiBold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     text-align: center;
     padding: 16px 25px;
     text-decoration: none;
@@ -165,5 +174,9 @@
     text-align: center;
     order: 1;
     padding-left: 0;
+  });
+
+  .sm-block({
+    min-width: 100%;
   });
 }
