info block adaptive

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -15,7 +15,8 @@
 
 .logo {
   .MTMB(14px);
-  display: inline-block;
+  display: flex;
+  align-items: center;
   text-transform: uppercase;
   text-decoration: none;
 
