--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,10 +1,12 @@
 @import 'smart-grid';
 @import 'fonts';
 @import 'var';
+@import 'tiny-slider.css';
 @import 'mixin';
 @import 'header';
 @import 'menu';
 @import 'tabs';
+@import 'info-block';
 
 html {
   .reset();
