--- a/app/less/menu.less
+++ b/app/less/menu.less
@@ -4,6 +4,8 @@
   margin-bottom: 21px;
   min-width: 40px;
   min-height: 40px;
+  display: flex;
+  align-items: center;
 
   .sm-block({
     display: flex;
