--- a/app/less/main.less
+++ b/app/less/main.less
@@ -7,6 +7,9 @@
 @import 'menu';
 @import 'tabs';
 @import 'info-block';
+@import 'why-this';
+@import 'price';
+@import 'say';
 
 html {
   .reset();
