--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -22,13 +22,17 @@
 
   .info__img {
     order: 1;
+    box-shadow: 0 9px 35px rgba(50, 50, 50, .6);
 
     .md-block({
       margin-bottom: 20px;
     });
 
     img {
-      max-width: 435px;
+      display: block;
+      .lmd(max-width, 435px);
+      .lxs(max-width, 380px);
+      .xs(max-width, 100%);
     }
   }
 
@@ -36,7 +40,7 @@
     order: 2;
     margin-left: 20px;
 
-    .md-block({
+    .lmd-block({
       margin-left: 0;
     });
   }
@@ -48,14 +52,18 @@
   .info__img {
     order: 2;
     margin-left: 20px;
+    box-shadow: 0 9px 35px rgba(50, 50, 50, .6);
 
-    .md-block({
+    .lmd-block({
       margin-left: 0;
       margin-top: 20px;
     });
 
     img {
-      max-width: 435px;
+      display: block;
+      .lmd(max-width, 435px);
+      .lxs(max-width, 380px);
+      .xs(max-width, 100%);
     }
   }
 
@@ -67,13 +75,17 @@
 .info__img {
   max-width: 437px;
 
-  .md-block({
+  /*.md-block({
     min-width: 100%;
-  });
+  });*/
 }
 
 .info__text {
   max-width: 415px;
+
+  .md-block({
+    max-width: 400px;
+  });
 
   .info__header {
     font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
@@ -105,6 +117,7 @@
     color: #86878B;
     font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 14px;
+    padding: 5px 0;
   }
 }
 
