--- a/app/less/tabs.less
+++ b/app/less/tabs.less
@@ -38,7 +38,7 @@
   .tabs__item {
     width: 112px;
     height: 112px;
-    color: white;
+    color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -62,7 +62,7 @@
       width: 100%;
       height: 100%;
       background: #333;
-      color: white;
+      color: #fff;
       text-align: center;
       border: none;
       outline: none;
@@ -141,7 +141,7 @@
   .tabs__contentBtn {
     border-radius: 3px;
     background: @main-color;
-    color: white;
+    color: #fff;
     font-family: 'OS SemiBold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     text-align: center;
     padding: 16px 25px;
@@ -173,7 +173,9 @@
   });
 
   img {
-    max-width: 435px;
+    .lmd(max-width, 435px);
+    .lxs(max-width, 380px);
+    .xs(max-width, 100%);
   }
 }
 
