--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -47,7 +47,7 @@
 }
 
 .info:nth-child(odd) {
-  background: #f5f5f5;
+  background: @bg;
 
   .info__img {
     order: 2;
@@ -114,7 +114,7 @@
   }
 
   .info__p {
-    color: #86878B;
+    color: @p-text;
     font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 14px;
     padding: 5px 0;
