--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,7 +1,7 @@
 @import 'smart-grid';
+@import 'tiny-slider.css';
 @import 'fonts';
 @import 'var';
-@import 'tiny-slider.css';
 @import 'mixin';
 @import 'header';
 @import 'menu';
@@ -10,6 +10,8 @@
 @import 'why-this';
 @import 'price';
 @import 'say';
+@import 'contact';
+@import 'footer-social';
 
 html {
   .reset();
@@ -17,12 +19,14 @@ html {
   font-family: 'OS Regular', sans-serif;
   overflow-x: hidden;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   font-size: 16px;
   background: #424242;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 .debug-grid {
