--- a/app/less/header.less
+++ b/app/less/header.less
@@ -4,7 +4,7 @@
 }
 
 .first-line {
-  background: #333;
+  background: @h-text;
   position: fixed;
   top: 0;
   left: 0;
@@ -221,7 +221,7 @@ form.form {
     font-size: 20px;
     padding: 12px 18px;
     font-family: 'OS Bold', sans-serif;
-    background: #f5f5f5;
+    background: @bg;
     margin-bottom: 58px;
     text-align: center;
 
@@ -375,13 +375,13 @@ form.form {
   .social__header {
     font-family: 'OS Bold', sans-serif;
     font-size: 20px;
-    color: #333;
+    color: @h-text;
   }
 
   .social__text {
     font-family: 'OS Regular', sans-serif;
     font-size: 14px;
-    color: #86878b;
+    color: @p-text;
   }
 }
 
