--- a/app/less/price.less
+++ b/app/less/price.less
@@ -3,7 +3,7 @@
 }
 
 .price {
-  background: #f5f5f5;
+  background: @bg;
   padding-top: 100px;
   padding-bottom: 100px;
 
@@ -33,10 +33,12 @@
 .price__item {
   flex-basis: 340px;
   margin-top: 29px;
+  border-radius: 3px;
+  overflow: hidden;
 
   .price__itemH3 {
     color: #fff;
-    background: #333;
+    background: @h-text;
     padding: 21px 0;
     border-bottom: 1px solid #fff;
     text-align: center;
@@ -48,7 +50,7 @@
     padding-top: 30px;
     padding-bottom: 10px;
     text-align: center;
-    background: #333;
+    background: @h-text;
 
     .price__currency {
       font-size: 35px;
@@ -67,7 +69,7 @@
     font-size: 14px;
     font-family: 'OS SemiBold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     color: #999;
-    background: #333;
+    background: @h-text;
     text-align: center;
     padding-bottom: 21px;
   }
@@ -94,12 +96,12 @@
       text-align: center;
       padding: 14px 0;
       font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
-      color: #86878b;
+      color: @p-text;
       font-size: 14px;
       text-transform: uppercase;
 
       &:not(:last-child) {
-        border-bottom: 1px solid #f5f5f5;
+        border-bottom: 1px solid @bg;
       }
     }
   }
