--- a/app/less/tabs.less
+++ b/app/less/tabs.less
@@ -1,5 +1,5 @@
 .tabs {
-  background: #F5F5F5;
+  background: @bg;
   padding-top: 148px;
   padding-bottom: 148px;
 
@@ -61,7 +61,7 @@
     .tabs__btn {
       width: 100%;
       height: 100%;
-      background: #333;
+      background: @h-text;
       color: #fff;
       text-align: center;
       border: none;
@@ -123,7 +123,7 @@
   }
 
   .tabs__contentWrapP {
-    color: #86878B;
+    color: @p-text;
     margin-bottom: 52px;
     max-width: 475px;
 
@@ -134,7 +134,7 @@
     .tabs__contentP {
       font-size: 14px;
       font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
-      color: #86878B;
+      color: @p-text;
     }
   }
 
@@ -148,6 +148,7 @@
     text-decoration: none;
     display: inline-block;
     transition: background .2s;
+    cursor: pointer;
 
     &:hover {
       transition: background .2s;
