--- a/app/less/menu.less
+++ b/app/less/menu.less
@@ -1,4 +1,3 @@
-
 .menu {
   margin-top: 21px;
   margin-bottom: 21px;
@@ -101,11 +100,6 @@
 
   .menu {
     &::after, &::before {
-      /*content: '';
-      display: none;
-      width: 30px;
-      height: 2px;
-      background: #fff;*/
       .sm-block({
         display: inline-block;
         position: fixed;
@@ -125,5 +119,21 @@
     .menu__container {
       display: block;
     }
+  }
+}
+
+.menu-scroll-hide {
+  transform: translateY(-100px);
+  transition: transform .3s;
+}
+
+// Подсвечивание пункта меню по скроллу
+.menu__container .menu__item .menu__link.menu__link-active {
+  color: @main-color;
+  transition: all .2s;
+
+  &::after {
+    width: 100%;
+    transition: all .2s;
   }
 }
