--- a/app/less/anim.less
+++ b/app/less/anim.less
@@ -20,7 +20,7 @@
   overflow: hidden;
   border-top: 2px solid @main-color;
   border-bottom: 2px solid @main-color;
-  margin: 50px auto;
+  margin: 0 auto;
   max-height: 35px;
   display: flex;
   justify-content: flex-start;
