--- a/app/less/header.less
+++ b/app/less/header.less
@@ -110,12 +110,14 @@
 
   .header-content__h1::after {
     content: '';
-    display: inline-block;
+    display: block;
     width: 67px;
     height: 2px;
     background: #fff;
     position: relative;
     z-index: 2;
+    margin-top: 30px;
+
     .md-block({
       display: block;
       margin: 30px auto 0;
