valid form hard code

--- a/app/less/form.less
+++ b/app/less/form.less
@@ -129,6 +129,10 @@ form.form {
   left: 0;
   padding: 0 35px;
 
+  .sm-block({
+    padding: 0 9px;
+  });
+
   li {
     margin-top: 5px;
     display: inline-block;
