--- a/app/less/var.less
+++ b/app/less/var.less
@@ -1,4 +1,8 @@
 @main-color: #ff9b51;
+//@main-color: #e48de0;
+//@main-color: #5a95ec;
 @p-text: #86878b;
 @h-text: #333333;
+//@h-text: #38244b;
+//@h-text: #055674;
 @bg: #f5f5f5;
