Form - functional -> Class

--- a/app/less/form.less
+++ b/app/less/form.less
@@ -131,13 +131,14 @@ form.form {
 
   .sm-block({
     padding: 0 9px;
+    text-align: center;
   });
 
   li {
     margin-top: 5px;
     display: inline-block;
     font-size: 11px;
-    color: #d46237;
+    color: darken(@main-color, 20%);
 
     &:not(:last-child) {
       margin-right: 5px;
