--- a/app/less/main.less
+++ b/app/less/main.less
@@ -57,3 +57,9 @@ body {
   align-items: center;
   .md(align-items, normal);
 }
+
+button[disabled="disabled"],
+button[disabled]
+{
+  background: @main-color !important;
+}
