--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -28,7 +28,7 @@
   min-width: 100%;
   text-align: center;
 
-  .contact__form-btn {
+  .contact__btn {
     cursor: pointer;
     border: none;
     outline: none;
@@ -54,17 +54,24 @@
   margin-right: 10px;
   .md(margin-right, 0);
 
-  .form__input-footer {
+  .contact__label {
+    display: block;
+    position: relative;
+    z-index: 3;
+    padding: 0 35px;
+    margin-bottom: 45px;
+  }
+
+  .contact__inp {
     border: none;
     outline: none;
     width: 100%;
     border-bottom: 1px solid #bdbdbd;
     height: 30px;
-    margin-bottom: 45px;
     text-indent: 10px;
     background: @bg;
     font-size: 14px;
-    font-family: 'R Light',sans-serif;
+    font-family: 'OS Light',sans-serif;
     
     &::placeholder {
       color: #bdbdbd;
@@ -74,9 +81,16 @@
 
 .contact__form2Block {
   width: 500px;
+
+  .contact__label {
+    display: block;
+    position: relative;
+    z-index: 3;
+    padding: 0 35px;
+  }
 }
 
-#form__msg-footer {
+#contact__textarea {
   border: none;
   outline: none;
   width: 100%;
@@ -86,7 +100,7 @@
   text-indent: 10px;
   background: @bg;
   font-size: 14px;
-  font-family: 'R Light',sans-serif;
+  font-family: 'OS Light',sans-serif;
   min-height: 182px;
 
   &::placeholder {
