implementation of the customer's idea

--- a/app/less/footer-social.less
+++ b/app/less/footer-social.less
@@ -1,14 +1,14 @@
 .footer__social {
-  background: @h-text;
+  background: @bg-dark;
   overflow: hidden;
 
   .icon {
-    fill: #86878b;
+    fill: #ffffff;
     width: 20px;
     height: 20px;
 
     &:hover {
-      fill: #ffffff;
+      fill: @main-color;
     }
   }
 
