--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -18,6 +18,7 @@
     font-family: 'R Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 36px;
     color: #212121;
+    text-transform: uppercase;
 
     .md(font-size, 30px);
 
