--- a/app/less/tabs.less
+++ b/app/less/tabs.less
@@ -61,7 +61,7 @@
     .tabs__btn {
       width: 100%;
       height: 100%;
-      background: @h-text;
+      background: @bg-dark;
       color: #fff;
       text-align: center;
       border: none;
