--- a/app/less/price.less
+++ b/app/less/price.less
@@ -38,7 +38,7 @@
 
   .price__itemH3 {
     color: #fff;
-    background: @h-text;
+    background: @bg-dark;
     padding: 21px 0;
     border-bottom: 1px solid #fff;
     text-align: center;
@@ -50,7 +50,7 @@
     padding-top: 30px;
     padding-bottom: 10px;
     text-align: center;
-    background: @h-text;
+    background: @bg-dark;
 
     .price__currency {
       font-size: 35px;
@@ -69,7 +69,7 @@
     font-size: 14px;
     font-family: 'OS SemiBold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     color: #999;
-    background: @h-text;
+    background: @bg-dark;
     text-align: center;
     padding-bottom: 21px;
   }
