--- a/app/less/var.less
+++ b/app/less/var.less
@@ -1,8 +1,13 @@
-@main-color: #FF8B38;
+//@main-color: #FF8B38;
 //@main-color: #e48de0;
 //@main-color: #5a95ec;
 @p-text: #86878b;
-@h-text: #333333;
+//@h-text: #333333;
 //@h-text: #38244b;
 //@h-text: #055674;
 @bg: #f5f5f5;
+@bg-dark: #000000;
+
+/* Logo Stas  */
+@main-color: #FE0000;
+@h-text: #000000a3;
