--- a/app/less/anim.less
+++ b/app/less/anim.less
@@ -63,7 +63,7 @@
         display: inline-block;
         height: 60px;
         width: 20px;
-        background: @h-text;
+        background: @bg-dark;
         transform: rotate(30deg) translateY(-10px);
       }
     }
@@ -106,7 +106,7 @@
   height: 107px;
   width: 107px;
   border-radius: 107px;
-  background: #282937;
+  background: @bg-dark;
   line-height: 130px;
   z-index: 10;
   opacity: 1;
