--- a/app/less/footer-social.less
+++ b/app/less/footer-social.less
@@ -24,3 +24,12 @@
     margin-bottom: 5px;
   }
 }
+
+.privacy-policy {
+  margin-bottom: 5px;
+  display: block;
+  color: #86878b;
+  text-decoration: none;
+  font-size: 9px;
+  text-align: center;
+}
