--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -17,7 +17,7 @@
     display: block;
     font-family: 'R Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 36px;
-    color: #212121;
+    color: @h-text;
     text-transform: uppercase;
 
     .md(font-size, 30px);
