--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -1,5 +1,5 @@
 .contact {
-  background: @bg;
+  background: #ffffff;
   padding-top: 100px;
   padding-bottom: 100px;
 
@@ -69,7 +69,7 @@
     border-bottom: 1px solid #bdbdbd;
     height: 30px;
     text-indent: 10px;
-    background: @bg;
+    //background: @bg;
     font-size: 14px;
     font-family: 'OS Light',sans-serif;
     
@@ -98,12 +98,84 @@
   border-bottom: 1px solid #bdbdbd;
   margin-bottom: 45px;
   text-indent: 10px;
-  background: @bg;
+  //background: @bg;
   font-size: 14px;
   font-family: 'OS Light',sans-serif;
   min-height: 182px;
 
   &::placeholder {
     color: #bdbdbd;
+  }
+}
+
+/* Инфо блок с контактами */
+.contactInfo {
+  background: @bg;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  .lmd-block({
+    padding-top: 50px;
+    padding-bottom: 50px;
+  });
+
+  &__header {
+    width: 100%;
+    .block__header;
+  }
+}
+
+.contactInfo__address {
+  width: 50%;
+  box-sizing: border-box;
+  min-width: 380px;
+
+  .md-block({
+    margin: 0 auto 50px auto;
+  });
+}
+
+.contactInfo__list {
+  .contactInfo__item {
+    color: @h-text;
+    font-size: 1.6rem;
+    font-family: 'OS Light',AdobeInvisFont,MyriadPro-Regular,sans-serif;
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+
+    .contactInfo__link {
+      color: @h-text;
+      font-size: 1.6rem;
+      font-family: 'OS Light',AdobeInvisFont,MyriadPro-Regular,sans-serif;
+      text-decoration: none;
+    }
+
+    .contactInfo__denomination {
+      color: @h-text;
+      font-size: 1.6rem;
+      font-family: 'R Bold',AdobeInvisFont,MyriadPro-Regular,sans-serif;
+      text-transform: uppercase;
+    }
+  }
+}
+
+.map__wrap {
+  max-width: 50%;
+  box-sizing: border-box;
+  overflow: hidden;
+  min-width: 450px;
+
+  .md-block({
+    margin: 0 auto;
+  });
+
+  #map {
+    width: 550px;
+    height: 318px;
+    box-sizing: border-box;
+    min-height: 100%;
+    min-width: 100%;
   }
 }
