--- a/app/less/header.less
+++ b/app/less/header.less
@@ -233,20 +233,20 @@
   width: 40px;
   height: 40px;
   stroke-width: 0;
-  stroke: @p-text;
-  fill: @p-text;
-  opacity: .8;
+  stroke: @bg-dark;
+  fill: @bg-dark;
+  //opacity: .8;
   transition: fill .2s;
 
   .md-block({
     width: 28px;
     height: 28px;
     opacity: 1;
-    fill: #dedede;
+    fill: @bg-dark;
   });
 
   &:hover {
-    fill: #bfbfbf;
+    fill: @main-color;
     transition: fill .2s;
   }
 }
