--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -146,7 +146,7 @@
     &:not(:last-child) {
       margin-bottom: 10px;
     }
-    .lxs(font-size, 1.2rem);
+    .lxs(font-size, 1.3rem);
 
     .contactInfo__link {
       color: @h-text;
@@ -154,7 +154,7 @@
       font-family: 'OS Light',AdobeInvisFont,MyriadPro-Regular,sans-serif;
       text-decoration: none;
 
-      .lxs(font-size, 1.2rem);
+      .lxs(font-size, 1.3rem);
     }
 
     .contactInfo__denomination {
@@ -162,6 +162,8 @@
       font-size: 1.6rem;
       font-family: 'R Bold',AdobeInvisFont,MyriadPro-Regular,sans-serif;
       text-transform: uppercase;
+
+      .lxs(font-size, 1.3rem);
     }
   }
 }
@@ -172,11 +174,11 @@
   overflow: hidden;
   min-width: 450px;
 
-  .md-block({
-    margin: 0 auto;
-  });
+  .md(margin, 0 auto);
 
-  .lxs(min-width, 300px);
+  .lxs-block({
+    min-width: 300px;
+  });
 
   #map {
     width: 550px;
@@ -184,5 +186,10 @@
     box-sizing: border-box;
     min-height: 100%;
     min-width: 100%;
+
+    .lxs-block({
+      width: 300px;
+      height: 280px;
+    });
   }
 }
