--- a/app/less/header.less
+++ b/app/less/header.less
@@ -68,7 +68,7 @@
   position: relative;
   z-index: 0;
   .md-block({
-    background: url("../img/dest/pipe4.webp") center no-repeat;
+    background: url("../img/dest/lighting-3489394_1280.webp") center no-repeat;
     height: auto;
   });
 }
