--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -103,7 +103,7 @@
       display: block;
       width: 64px;
       height: 2px;
-      background: @main-color;
+      background: var(--main-color);
       margin-top: 20px;
 
       .md-block({
@@ -132,7 +132,7 @@
 
   .info__wrapIcon {
     flex-shrink: 2;
-    border: 2px solid @main-color;
+    border: 2px solid var(--main-color);
     border-radius: 50%;
     height: 40px;
     width: 40px;
@@ -147,7 +147,7 @@
     });
 
     svg.icon {
-      fill: @main-color;
+      fill: var(--main-color);
       width: 20px;
       height: 20px;
     }
