--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,5 +1,5 @@
 @import 'smart-grid';
-@import 'fonts';
+//@import 'fonts';
 @import 'var';
 @import 'mixin';
 @import 'tiny-slider.css';
@@ -62,5 +62,5 @@ body {
 button[disabled="disabled"],
 button[disabled]
 {
-  background: @main-color !important;
+  background: var(--main-color) !important;
 }
