--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -17,7 +17,7 @@
     display: block;
     font-family: 'R Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 36px;
-    color: @h-text;
+    color: var(--h-text);
     text-transform: uppercase;
 
     .md(font-size, 30px);
@@ -27,7 +27,7 @@
       display: block;
       width: 64px;
       height: 2px;
-      background: @main-color;
+      background: var(--main-color);
       margin: 30px auto;
       text-align: center;
 
