--- a/app/less/price.less
+++ b/app/less/price.less
@@ -75,7 +75,7 @@
   }
 
   .price__mainColor {
-    background: @main-color;
+    background: var(--main-color);
     text-align: center;
     color: #fff;
     text-transform: uppercase;
