--- a/app/less/say.less
+++ b/app/less/say.less
@@ -78,7 +78,7 @@
   .say__user-container-data {
     
     .say__name-user {
-      color: @h-text;
+      color: var(--h-text);
       font-family: 'OS Bold',AdobeInvisFont,MyriadPro-Regular,sans-serif;
       font-size: 20px;
     }
@@ -125,7 +125,7 @@ button[data-action="stop"],
 }
 
 .tns-nav button.tns-nav-active {
-  background: @main-color;
+  background: var(--main-color);
 }
 
 .tns-outer {
