--- a/app/less/var.less
+++ b/app/less/var.less
@@ -10,4 +10,14 @@
 
 /* Logo Stas  */
 @main-color: #FE0000;
+@hover-main-color: #cb0000;
 @h-text: #000000a3;
+
+:root {
+  --main-color: @main-color;
+  --hover-main-color: @hover-main-color;
+  --h-text: @h-text;
+  --p-text: @p-text;
+  --bg: @bg;
+  --bg-dark: @bg-dark;
+}
