--- a/app/less/why-this.less
+++ b/app/less/why-this.less
@@ -28,7 +28,7 @@
     });
 
     .wrapIcon {
-      border: 2px solid @main-color;
+      border: 2px solid var(--main-color);
       border-radius: 50%;
       height: 40px;
       width: 40px;
@@ -40,7 +40,7 @@
       margin: 0 auto 29px;
 
       svg.icon {
-        fill: @main-color;
+        fill: var(--main-color);
         width: 20px;
         height: 20px;
       }
