--- a/app/less/header.less
+++ b/app/less/header.less
@@ -4,7 +4,7 @@
 }
 
 .first-line {
-  background: @h-text;
+  background: var(--h-text);
   position: fixed;
   top: 0;
   left: 0;
@@ -38,7 +38,7 @@
 
   .logo__bold {
     font-family: 'R Bold', sans-serif;
-    color: @main-color;
+    color: var(--main-color);
     text-transform: uppercase;
     .logoFZ(18px);
 
@@ -145,7 +145,7 @@
 
   .logo__bold {
     font-family: 'R Bold', sans-serif;
-    color: @main-color;
+    color: var(--main-color);
     text-transform: uppercase;
     .logoFZ(44px);
     .md-block({
@@ -193,8 +193,8 @@
     box-shadow: 2px 2px 6px rgba(50, 50, 50, .5), -2px -2px 6px rgba(50, 50, 50, .15);
     transform: scale(1.03);
     transition: box-shadow, transform, border, color .2s;
-    border: 2px solid @main-color;
-    color: @main-color;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
   }
 }
 
@@ -246,7 +246,7 @@
   });
 
   &:hover {
-    fill: @main-color;
+    fill: var(--main-color);
     transition: fill .2s;
   }
 }
@@ -278,7 +278,7 @@
   .social__header {
     font-family: 'OS Bold', sans-serif;
     font-size: 20px;
-    color: @h-text;
+    color: var(--h-text);
   }
 
   .social__text {
