--- a/app/less/form.less
+++ b/app/less/form.less
@@ -145,3 +145,58 @@ form.form {
     }
   }
 }
+
+/* Сообщения об отправки данных из формы */
+.messageSuccess,
+.messageNotSuccess {
+  position: absolute;
+  z-index: 10;
+  background: var(--bg-dark);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  padding: 20px 10px;
+  text-align: center;
+  box-sizing: border-box;
+  display: none;
+
+  &__closeBTN {
+    display: block;
+    margin: 0 15px 0 auto;
+    width: 30px;
+    height: 30px;
+    background: var(--main-color);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+    transition: transform .5s;
+    transform: rotate(0);
+
+    .messageSuccess__cross,
+    .messageNotSuccess__cross {
+      color: #ffffff;
+    }
+
+    &:hover {
+      transition: transform .5s;
+      transform: rotate(180deg);
+    }
+  }
+
+  &__header {
+    font-size: 20px;
+    font-family: 'OS Bold',sans-serif;
+    margin: 40px 0;
+    color: var(--main-color);
+  }
+
+  &__p {
+    font-size: 15px;
+    font-family: 'OS SemiBold',sans-serif;
+    color: #ffffff;
+  }
+}
