--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: relative;
 
   .lg(justify-content, center);
 }
