--- a/app/less/form.less
+++ b/app/less/form.less
@@ -200,3 +200,10 @@ form.form {
     color: #ffffff;
   }
 }
+
+.text-error {
+  margin-top: 10px;
+  font-size: 14px;
+  font-family: 'R Thin',sans-serif;
+  color: var(--main-color);
+}
