--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -111,7 +111,7 @@
 
 /* Инфо блок с контактами */
 .contactInfo {
-  background: @bg;
+  background: var(--bg);
   padding-top: 100px;
   padding-bottom: 100px;
 
