--- a/app/less/footer-social.less
+++ b/app/less/footer-social.less
@@ -1,5 +1,5 @@
 .footer__social {
-  background: @bg-dark;
+  background: var(--bg-dark);
   overflow: hidden;
 
   .icon {
@@ -19,13 +19,13 @@
 
   .footer__copyright {
     font-size: 11px;
-    color: @p-text;
+    color: var(--p-text);
     text-align: center;
     margin-bottom: 5px;
 
     a {
       text-decoration: none;
-      color: @p-text;
+      color: var(--p-text);
     }
   }
 }
