--- a/app/less/form.less
+++ b/app/less/form.less
@@ -32,7 +32,7 @@ form.form {
     font-size: 20px;
     padding: 12px 18px;
     font-family: 'OS Bold', sans-serif;
-    background: @bg;
+    background: var(--bg);
     margin-bottom: 58px;
     text-align: center;
 
