--- a/app/less/header.less
+++ b/app/less/header.less
@@ -231,8 +231,8 @@
   width: 40px;
   height: 40px;
   stroke-width: 0;
-  stroke: @bg-dark;
-  fill: @bg-dark;
+  stroke: var(--bg-dark);
+  fill: var(--bg-dark);
   //opacity: .8;
   transition: fill .2s;
 
@@ -240,7 +240,7 @@
     width: 28px;
     height: 28px;
     opacity: 1;
-    fill: @bg-dark;
+    fill: var(--bg-dark);
   });
 
   &:hover {
@@ -282,7 +282,7 @@
   .social__text {
     font-family: 'OS Regular', sans-serif;
     font-size: 14px;
-    color: @p-text;
+    color: var(--p-text);
   }
 }
 
