--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -41,6 +41,6 @@
   h3 {
     font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 14px;
-    color: @p-text;
+    color: var(--p-text);
   }
 }
