--- a/app/less/var.less
+++ b/app/less/var.less
@@ -15,9 +15,9 @@
 
 :root {
   --main-color: #FE0000;
-  --hover-main-color: @hover-main-color;
-  --h-text: @h-text;
-  --p-text: @p-text;
-  --bg: @bg;
-  --bg-dark: @bg-dark;
+  --hover-main-color: #cb0000;
+  --h-text: #000000a3;
+  --p-text: #86878b;
+  --bg: #f5f5f5;
+  --bg-dark: #000000;
 }
