--- a/app/less/why-this.less
+++ b/app/less/why-this.less
@@ -49,12 +49,12 @@
     h3 {
       font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
       font-size: 20px;
-      color: @h-text;
+      color: var(--h-text);
       margin-bottom: 25px;
     }
 
     .whyThis__p {
-      color: @p-text;
+      color: var(--p-text);
       font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
       font-size: 14px;
       padding: 0 5px;
