--- a/app/less/say.less
+++ b/app/less/say.less
@@ -34,7 +34,7 @@
   }
 
   p.say__p {
-    color: @p-text;
+    color: var(--p-text);
     padding: 24px 12px;
     font-family: 'OS Regular',AdobeInvisFont,MyriadPro-Regular,sans-serif;
     font-size: 14px;
@@ -43,6 +43,7 @@
     position: relative;
     border-radius: 5px;
     text-align: left;
+    text-indent: 10px;
 
     &::after {
       content: '';
@@ -54,7 +55,7 @@
       height: 0;
       border-left: 10px solid transparent;
       border-right: 10px solid transparent;
-      border-top: 20px solid @bg;
+      border-top: 20px solid var(--bg);
     }
   }
 }
@@ -85,7 +86,7 @@
     }
 
     .say__profession {
-      color: @p-text;
+      color: var(--p-text);
       font-family: 'OS Regular',AdobeInvisFont,MyriadPro-Regular,sans-serif;
       font-size: 14px;
     }
@@ -113,7 +114,7 @@ button[data-action="stop"],
   max-height: 12px !important;
   min-width: 10px !important;
   min-height: 12px !important;
-  background: @bg;
+  background: var(--bg);
   text-align: center;
   border-radius: 50%;
   border: none;
