--- a/app/less/tabs.less
+++ b/app/less/tabs.less
@@ -1,5 +1,5 @@
 .tabs {
-  background: @bg;
+  background: var(--bg);
   padding-top: 148px;
   padding-bottom: 148px;
 
@@ -61,7 +61,7 @@
     .tabs__btn {
       width: 100%;
       height: 100%;
-      background: @bg-dark;
+      background: var(--bg-dark);
       color: #fff;
       text-align: center;
       border: none;
@@ -137,7 +137,7 @@
   }
 
   .tabs__contentWrapP {
-    color: @p-text;
+    color: var(--p-text);
     margin-bottom: 52px;
     max-width: 475px;
 
@@ -148,7 +148,8 @@
     .tabs__contentP {
       font-size: 14px;
       font-family: 'OS Regular', AdobeInvisFont, MyriadPro-Regular, sans-serif;
-      color: @p-text;
+      color: var(--p-text);
+      text-indent: 10px;
     }
   }
 
