--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -37,10 +37,10 @@
       display: block;
       max-height: 100%;
       max-width: 100%;
-      //max-height: 550px;
-      //.lmd(max-width, 435px);
-      //.lxs(max-width, 380px);
-      //.xs(max-width, 100%);
+
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
@@ -57,7 +57,7 @@
   }
 
 
-.info__img {
+  .info__img {
     box-shadow: 0 9px 35px rgba(50, 50, 50, .6);
 
     .lmd-block({
@@ -127,7 +127,7 @@
       text-align: left;
 
       .md-block({
-        text-align: center;
+        text-align: left;
         margin: 20px auto 0;
       });
     }
@@ -206,11 +206,6 @@ button[data-action="start"],
   width: 100%;
   height: auto;
   object-fit: cover;
-  margin-right: 20px;
-
-  .sm-block({
-    margin-right: 0;
-  });
 
   .wrap-info__img {
     width: 350px;
@@ -243,4 +238,81 @@ button[data-action="start"],
 .anim_info_text {
   transition: transform 1s;
   transform: translateX(-1000px) scale(0.1);
+}
+
+/* Анимация карточки */
+.wrap-for-animation {
+  position: relative;
+  box-shadow: 0 0 40px #656565, inset 0 0 40px #656565;
+  margin-right: 20px;
+  transition: all .7s;
+  z-index: 10;
+
+  .sm-block({
+    margin-right: 0;
+  });
+
+  .anim1-element {
+    width: 130px;
+    position: absolute;
+    height: 253px;
+    top: -161px;
+    left: -66px;
+    background: url(../img/dest/provodka.webp) center center no-repeat;
+    background-size: contain;
+    pointer-events: none;
+    z-index: -40;
+    transition: all .7s;
+    transform-style: preserve-3d;
+    filter: grayscale(100%);
+    transform: perspective(1200px) translateZ(180px) rotate(266deg);
+  }
+
+  .anim2-element {
+    width: 81px;
+    position: absolute;
+    height: 253px;
+    top: -127px;
+    right: -73px;
+    background: url(../img/dest/lamp1.webp) center center no-repeat;
+    background-size: contain;
+    pointer-events: none;
+    z-index: 40;
+    transition: all .7s;
+    transform-style: preserve-3d;
+    filter: grayscale(100%);
+    transform: perspective(1200px) translateZ(180px) rotate(45deg);
+  }
+
+  .anim3-element {
+    width: 98px;
+    position: absolute;
+    height: 253px;
+    bottom: -114px;
+    right: -20px;
+    background: url(../img/dest/lamp2.webp) center center no-repeat;
+    background-size: contain;
+    pointer-events: none;
+    z-index: 40;
+    transition: all .7s;
+    transform-style: preserve-3d;
+    filter: grayscale(100%);
+    transform: perspective(1200px) translateZ(180px) rotate(225deg);
+  }
+
+  .anim4-element {
+    width: 134px;
+    position: absolute;
+    height: 253px;
+    bottom: -102px;
+    left: -72px;
+    background: url(../img/dest/truby.webp) center center no-repeat;
+    background-size: contain;
+    pointer-events: none;
+    z-index: 40;
+    transition: all .7s;
+    transform-style: preserve-3d;
+    filter: grayscale(100%);
+    transform: perspective(1200px) translateZ(180px);
+  }
 }
