--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -111,6 +111,10 @@
     flex-basis: 100%;
   });
 
+  .sm-block({
+    margin-bottom: 20px;
+  });
+
   .info__header {
     font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
     font-size: 20px;
@@ -257,12 +261,15 @@ button[data-action="start"],
   z-index: 10;
 
   .sm-block({
-    margin-right: 0;
     margin-bottom: 40px;
   });
 
   .md-block({
     max-width: 252px;
+  });
+
+  .lxs-block({
+    margin-right: 0;
   });
 
   .anim1-element {
