--- a/app/less/info-block.less
+++ b/app/less/info-block.less
@@ -364,3 +364,92 @@ button[data-action="start"],
     });
   }
 }
+
+/* Анимация */
+#info_anim_text {
+  position: relative;
+}
+
+.wrap_animateBlockWithText {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  width: 300px;
+  height: 300px;
+  backface-visibility: visible;
+
+  transform-style: preserve-3d;
+  transform-origin: 0 0 0;
+  transform: perspective(1200px) rotateX(5deg) rotateY(5deg);
+
+  .animateBlockWithText__list {
+    transform-style: preserve-3d;
+    transform: perspective(2000px) rotateX(298deg) rotateY(346deg) rotateZ(303deg);
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .animateBlockWithText__item {
+      transform-style: preserve-3d;
+      backface-visibility: revert;
+      background: white;
+      width: 200px;
+      height: 35px;
+      max-height: 35px;
+      overflow: hidden;
+      opacity: .9;
+      box-sizing: border-box;
+      border-top: 2px solid var(--main-color);
+      border-bottom: 2px solid var(--main-color);
+      border-left: 1.5px solid var(--main-color);
+      border-right: 1.5px solid var(--main-color);
+
+      .animateBlockWithText__text {
+        font-family: 'OS Bold', AdobeInvisFont, MyriadPro-Regular, sans-serif;
+        font-size: 24px;
+        text-align: center;
+        white-space: nowrap;
+        text-transform: uppercase;
+        backface-visibility: visible;
+        color: var(--h-text);
+        -webkit-text-stroke: 1px var(--h-text);
+        -webkit-text-fill-color: white;
+      }
+    }
+
+    .item1 {
+      transform-origin: 50% 50% -100px;
+      transform: rotateY(0) perspective(2000px);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .item2 {
+      transform-origin: 50% 50% -100px;
+      transform: rotateY(90deg) perspective(2000px);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .item3 {
+      transform-origin: 50% 50% -100px;
+      transform: rotateY(-90deg) perspective(2000px);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .item4 {
+      transform-origin: 50% 50% -100px;
+      transform: translateZ(-209px) perspective(2000px);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+}
